# dims

./: Cargo.toml  LICENSE  readme.md
.github/workflows/: rust.yml
dims/: Cargo.toml  readme.md
dims/src/: float.rs  lib.rs  systems.rs  unit_type.rs
dims/src/imperial/: temperature.rs
dims/src/si/: area.rs  length.rs  mod.rs  temperature.rs  volume.rs
dims/src/us/: area.rs  area_survey.rs  length.rs  length_nautical.rs  length_survey.rs  mod.rs  temperature.rs  volume.rs  volume_customary.rs  volume_dry.rs  volume_nutritional.rs  volume_wet.rs  weight.rs
dims/tests/: temperature.rs
dims_core/: Cargo.toml  readme.md
dims_core/src/: float.rs  lib.rs  si_macro.rs
dims_core/src/system/: measure.rs  mod.rs  unit.rs  unit_format.rs  unit_simple.rs
dims_core/tests/: test_debug.rs  test_mul_div.rs  test_ops.rs  test_size.rs  test_str.rs  test_unit_eq.rs  unit_create.rs
dims_core/tests/common/: mod.rs
dims_derive/: Cargo.toml
dims_derive/src/: lib.rs  measure_system.rs
dims_derive/tests/: measure.rs
dims_macro/: Cargo.toml  readme.md
dims_macro/src/: lib.rs  no_str.rs  si_macro.rs  si_units.rs  system.rs  with_str.rs
dims_macro/tests/: measure.rs  unit_create.rs
test_nostd/: Cargo.toml
test_nostd/src/: lib.rs  test_dims.rs  test_new.rs  test_system.rs
test_us/: Cargo.toml
test_us/src/: lib.rs  test_debug.rs
