[package]
name = "dims"
version = "0.2.1"
authors = ["William Carroll"]
edition = "2021"
license = "MIT"
keywords = ["measurement", "dimension", "unit"]
description = "Unit-Aware Types Library"
repository = "https://github.com/WilliamTCarroll/dims"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dims_derive = { path = "../dims_derive", version = "0.2.1"}
dims_core   = { path = "../dims_core",   version = "0.2.1", default-features = false} 
dims_macro  = { path = "../dims_macro",  version = "0.2.1", default-features = false} 

[features]
default = ["us", "si", "str"]
# Pass each of these along to core
no_std = ["dims_core/no_std"]
str = ["dims_core/str","dims_macro/str"]
f64 = ["dims_core/f64"]
us = []
si = []