[package]
name = "dims_core"
version = "0.5.1"
authors = ["William Carroll"]
edition = "2021"
license = "MIT"
description = "Core Utils for Generating Units and Systems"
repository = "https://github.com/WilliamTCarroll/dims"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opimps = "0.2.2"
num-traits = { version = "0.2", default-features = false }

[features]
default = ["str", "std"]
std = ["num-traits/std"]
str = []
f64 = []
