[package]
name = "dims_derive"
version = "0.2.1"
authors = ["William Carroll"]
edition = "2021"
license = "MIT"
description = "Derive macros for Generating Systems of Units"
repository = "https://github.com/WilliamTCarroll/dims"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
dims_core = {path = "../dims_core", version = "0.2.1"}
syn = "1.0"
quote = "1.0"