[package]
name = "dims_macro"
version = "0.2.1"
authors = ["William Carroll"]
edition = "2021"
license = "MIT"
description = "Macros for Generating Systems of Units"
repository = "https://github.com/WilliamTCarroll/dims"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0"

[dev-dependencies]
rand = "0.7"

dims_derive = { path = "../dims_derive", version = "0.2.1"}
dims_core   = { path = "../dims_core",   version = "0.2.1", default-features = false} 


[features]
default = ["str"]
# Pass each of these along to core
no_std = ["dims_core/no_std"]
str = ["dims_core/str"]
f64 = ["dims_core/f64"]
