[package]
name = "dims_macro"
version = "0.4.2"
authors = ["William Carroll"]
edition = "2021"
license = "MIT"
description = "Macros for Generating Systems of Units"
repository = "https://github.com/WilliamTCarroll/dims"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0"
dims_core = { path = "../dims_core", version = "0.4.2", default-features = false }

[dev-dependencies]
rand = "0.7"

[features]
default = ["str", "std"]
# Pass each of these along to core
std = ["dims_core/std"]
str = ["dims_core/str"]
f64 = ["dims_core/f64"]
