[package]
name = "test_nostd"
version = "0.1.0"
authors = ["William <antagonisticapple@gmail.com>"]
edition = "2018"

# Empty workspace tag to keep this from polluting the flags in the other packages
[workspace]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.dims_core]
path = "../dims_core"
default-features = false
features = ["no_std", "f64"]

[dependencies.dims]
path = "../dims"
default-features = false
features = ["no_std", "si", "us", "f64"]
