[package]
name = "test_nostd"
version = "0.1.0"
authors = ["William Carroll"]
edition = "2021"
license = "MIT"

# Empty workspace tag to keep this from polluting the flags in the other packages
[workspace]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dependencies.dims]
path = "../dims"
default-features = false
features = [ "si", "us", "f64"]
